# cplexAPI

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
R/: cplex.R  cplexAPI.R  cplexConst.R  cplexErrorClass.R  cplexPtrClass.R  cplex_checkAPI.R  cplex_longparamAPI.R  generics.R  zzz.R
autom4te.cache/: output.0  requests  traces.0
inst/: INSTALL  NEWS.Rd  README  c2r.map
man/: addChannelCPLEX.Rd  addColsCPLEX.Rd  addFpDestCPLEX.Rd  addIndConstrCPLEX.Rd  addMIPstartsCPLEX.Rd  addQConstrCPLEX.Rd  addRowsCPLEX.Rd  baroptCPLEX.Rd  baseWriteCPLEX.Rd  basicPresolveCPLEX.Rd  boundSaCPLEX.Rd  cLpWriteCPLEX.Rd  checkAddColsCPLEX.Rd  checkAddRowsCPLEX.Rd  checkChgCoefListCPLEX.Rd  checkCopyColTypeCPLEX.Rd  checkCopyLpCPLEX.Rd  checkCopyLpwNamesCPLEX.Rd  checkCopyQPsepCPLEX.Rd  checkCopyQuadCPLEX.Rd  checkValsCPLEX.Rd  chgBndsCPLEX.Rd  chgCoefCPLEX.Rd  chgCoefListCPLEX.Rd  chgColNameCPLEX.Rd  chgColTypeCPLEX.Rd  chgColsBndsCPLEX.Rd  chgMIPstartsCPLEX.Rd  chgNameCPLEX.Rd  chgObjCPLEX.Rd  chgProbNameCPLEX.Rd  chgProbTypeCPLEX.Rd  chgQPcoefCPLEX.Rd  chgRhsCPLEX.Rd  chgRngValCPLEX.Rd  chgRowNameCPLEX.Rd  chgSenseCPLEX.Rd  chgTerminateCPLEX.Rd  cleanupCoefCPLEX.Rd  cloneProbCPLEX.Rd  (+172 more)
src/: Makevars.win  config.h.in  cplexAPI.c  cplexAPI.h  cplexR.c  cplexR.h  cplex_checkAPI.c  cplex_checkAPI.h  cplex_longparamAPI.c  cplex_longparamAPI.h  init.c
vignettes/: cplexAPI.Rnw
